--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.2",
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "slugify": "^1.6.6"
     }
 }
