--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       MYSQL_DATABASE: mydb
+      DB_NAME: mydb
+      JWT_SECRET: f2e61dd95af62e2f2d17bd224c4a2458
     depends_on:
       - db
 
