--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "7000:3000"
     environment:
-      MYSQL_HOST: db
+      DB_HOST: db
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       MYSQL_DATABASE: mydb
