--- a/platform/package.json
+++ b/platform/package.json
@@ -13,8 +13,9 @@
         "@chakra-ui/react": "^2.8.1",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "antd-country-phone-input": "^4.5.1",
         "antd": "^5.10.0",
+        "antd-country-phone-input": "^4.5.1",
+        "apexcharts": "^3.43.2-0",
         "classnames": "^2.3.2",
         "framer-motion": "^10.16.4",
         "iconsax-react": "^0.0.8",
@@ -23,7 +24,9 @@
         "react-apexcharts": "^1.4.1",
         "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18",
+        "react-hot-toast": "^2.4.1",
         "react-iconly": "^2.2.10",
+        "react-select-currency": "^1.0.7",
         "react-tabs": "^6.0.2",
         "world_countries_lists": "^2.8.2"
     },
