--- a/platform/package.json
+++ b/platform/package.json
@@ -13,6 +13,7 @@
         "@chakra-ui/react": "^2.8.1",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@reduxjs/toolkit": "^1.9.7",
         "antd": "^5.10.0",
         "antd-country-phone-input": "^4.5.1",
         "apexcharts": "^3.43.2-0",
@@ -26,6 +27,7 @@
         "react-dom": "^18",
         "react-hot-toast": "^2.4.1",
         "react-iconly": "^2.2.10",
+        "react-redux": "^8.1.3",
         "react-select-currency": "^1.0.7",
         "react-tabs": "^6.0.2",
         "world_countries_lists": "^2.8.2"
