--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,8 @@
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
         "mysql": "^2.18.1",
-        "slugify": "^1.6.6"
+        "nodemon": "^3.0.1",
+        "slugify": "^1.6.6",
+        "zeptomail": "^5.0.0"
     }
 }
