--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,10 @@
         "@project-serum/spl-token": "^0.26.0",
         "@solana/spl-token": "^0.1.8",
         "@solana/web3.js": "^1.87.1",
+        "axios": "^1.5.1",
         "bcrypt": "^5.1.1",
         "bs58": "^5.0.0",
+        "cookie": "^0.5.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
