--- a/platform/package.json
+++ b/platform/package.json
@@ -17,7 +17,9 @@
         "antd": "^5.10.0",
         "antd-country-phone-input": "^4.5.1",
         "apexcharts": "^3.43.2-0",
+        "axios": "^1.5.1",
         "classnames": "^2.3.2",
+        "cookie": "^0.5.0",
         "framer-motion": "^10.16.4",
         "iconsax-react": "^0.0.8",
         "next": "13.5.4",
