--- a/api/vercel.json
+++ b/api/vercel.json
@@ -12,5 +12,5 @@
             "dest": "index.js"
         }
     ],
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "rewrites": [{ "source": "/api/v1/(.*)", "destination": "/api" }]
 }
