--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
     ports:
       - "7010:3000"
     environment:
-      DB_HOST: db
+      DB_HOST: 159.65.213.14
+      DB_PORT: 7306
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       MYSQL_DATABASE: mydb
@@ -38,8 +39,6 @@ services:
       ZEPTOMAIL_TOKEN: Zoho-enczapikey wSsVR60g/Rf4Dat7n2KpJb05mF0EUVP3EEp73lT36X76Gf/H9sc5k0GfBQ6vHfNKQjJpEWQR8bt7mR8DgGYLi9wpyQtSACiF9mqRe1U4J3x17qnvhDzJWGxblhaAJI0Bxw9vkmZiEM8g+g==
       MASTER_ADDRESS: 9AG3tQ91Wh2N5KodqcCfA1v7SnVhcbtBaYeRcMgPDzeL
       MASTER_KEY: 2ZxfaM32EYFGj9MXt9ss7eJV9wpdSp5iTjgqHoyR7ryXgPFL6sGWrXKRyBEAV9KXbZhaF1ajcf9xsxTvHTcKWuFN
-    depends_on:
-      - db
   db:
     image: mysql:5.7
     container_name: solramp-db
